# arabica

./: .bzrignore  .cvsignore  .gitignore  AUTHORS  Arabica.dsw  Arabica.sln  CMake.README  CMakeLists.txt  COPYING  ChangeLog  Documentation.dsp  Doxyfile  HOWTOBUILD  LICENSE  Makefile  Makefile.am  Makefile.common  Makefile.header  Makefile.header.cygwin  Makefile.header.darwin  Makefile.header.linux  Makefile.header.solaris7_gcc  Makefile.rules  NEWS  README  README.md  SAXinCPP.bpg  arabica.pc.in  autogen.sh  configure.ac  missing  sax.dox  todo.txt
examples/DOM/: DOMWriter.cpp  DOMWriter.dsp  Makefile.am  dom2pyx.cpp
examples/SAX/: .cvsignore  Makefile  Makefile.am  SimpleHandler.cpp  SimpleHandler.dep  SimpleHandler.dsp  SimpleHandler.h  SimpleHandler.hpp  SimpleHandler.mak  SimpleHandler.vcproj  Writer.dsp  Writer.vcproj  example_XMLBase.vcproj  pyx.bpf  pyx.bpr  pyx.cpp  pyx.dep  pyx.dsp  pyx.mak  pyx.vcproj  wrapper.cpp  writer.cpp  xmlbase.cpp
include/: Makefile.am
include/Arabica/: StringAdaptor.hpp  getparam.hpp  mbstate.hpp  stringadaptortag.hpp
include/DOM/: Attr.h  Attr.hpp  CDATASection.h  CDATASection.hpp  CharacterData.h  CharacterData.hpp  Comment.h  Comment.hpp  DOMException.hpp  DOMImplementation.h  DOMImplementation.hpp  Document.h  Document.hpp  DocumentFragment.h  DocumentFragment.hpp  DocumentType.hpp  Element.hpp  Entity.h  Entity.hpp  EntityReference.h  EntityReference.hpp  NamedNodeMap.hpp  Node.h  Node.hpp  NodeList.h  NodeList.hpp  Notation.h  Notation.hpp  ProcessingInstruction.hpp  Proxy.h  Proxy.hpp  Text.hpp
include/SAX/: ArabicaConfig.hpp.in  AttributeList.h  AttributeList.hpp  Attributes.hpp  ContentHandler.hpp  DTDHandler.hpp  DocumentHandler.h  DocumentHandler.hpp  EntityResolver.hpp  ErrorHandler.h  ErrorHandler.hpp  HandlerBase.hpp  IStreamHandle.h  IStreamHandle.hpp  InputSource.h  InputSource.hpp  Locator.hpp  Parser.h  Parser.hpp  ParserConfig.h  ParserConfig.hpp  SAXException.hpp  SAXNotRecognizedException.hpp  SAXNotSupportedException.hpp  SAXParseException.hpp  XMLFilter.hpp  XMLReader.h  XMLReader.hpp  saxfwd.h  saxfwd.hpp
include/Taggle/: Taggle.hpp
include/Utils/: StringAdaptor.h  StringAdaptor.hpp  convertstream.h  getparam.hpp  iso88591utf8codecvt.h  iso88591utf8codecvt.hpp  nil_t.hpp  normalize_whitespace.hpp  rot13codecvt.h  rot13codecvt.hpp  socket_stream.h  socket_stream.hpp  ucs2utf8codecvt.hpp  uri.hpp  utf16beucs2codecvt.hpp  utf16leucs2codecvt.h  utf16leucs2codecvt.hpp  utf16utf8codecvt.hpp  utf8iso88591codecvt.h  utf8ucs2codecvt.h
include/XML/: QName.hpp  UnicodeCharacters.h  XMLCharacterClasses.hpp  escaper.hpp  strings.hpp
include/XPath/: XPath.hpp
include/XSLT/: XSLT.hpp
include/convert/: base64codecvt.hpp  iso88591utf8codecvt.hpp  rot13codecvt.hpp  ucs2utf8codecvt.hpp  utf16beucs2codecvt.hpp  utf16leucs2codecvt.hpp  utf16utf8codecvt.hpp  utf8iso88591codecvt.hpp  utf8ucs2codecvt.hpp
include/io/: convert_adaptor.hpp  convertstream.hpp  socket_stream.hpp  uri.hpp
include/text/: UnicodeCharacters.hpp  normalize_whitespace.hpp
src/: ArabicaConfig.S  Makefile  Makefile.am  Makefile.mingw  SAX.dsp  SAX.vcproj  XMLCharacterClasses.cpp  arabica.cpp  saxlib.S  saxlib.bpf
src/SAX/: Makefile  SAX.vcproj  saxlib.S  saxlib.bpr
src/Utils/: base64codecvt.cpp  iso88591utf8codecvt.cpp  rot13codecvt.cpp  ucs2utf8codecvt.cpp  uri.cpp  utf16beucs2codecvt.cpp  utf16leucs2codecvt.cpp  utf16utf8codecvt.cpp  utf8iso88591codecvt.cpp  utf8ucs2codecvt.cpp
src/XML/: XMLCharacterClasses.cpp
src/convert/: base64codecvt.cpp  iso88591utf8codecvt.cpp  rot13codecvt.cpp  ucs2utf8codecvt.cpp  utf16beucs2codecvt.cpp  utf16leucs2codecvt.cpp  utf16utf8codecvt.cpp  utf8iso88591codecvt.cpp  utf8ucs2codecvt.cpp
src/io/: uri.cpp
src/taggle/: Schema.cpp
test/DOM/: DOM_test.vcproj  Makefile  Makefile.am  dom_test_suite.hpp  main.cpp  main_wide.cpp  test_CDATA.hpp  test_CharacterData.hpp  test_DOMImplementation.h  test_DocumentFragment.h  test_DocumentType.h  test_Element.h  test_ProcessingInstruction.h  test_SAX2DOM.hpp  test_Siblings.h  test_Text.hpp
test/SAX2DOM/: Makefile  Makefile.am  SAX2DOM_test.dsp  SAX2DOM_test.vcproj  main.cpp  test_Attribute.cpp  test_Attribute.h  test_CDATA.cpp  test_CDATA.hpp  test_CharacterData.cpp  test_CharacterData.hpp  test_DOMImplementation.cpp  test_DOMImplementation.h  test_Document.cpp  test_Document.h  test_DocumentFragment.cpp  test_DocumentFragment.h  test_DocumentType.cpp  test_DocumentType.h  test_Element.cpp  test_Element.h  test_Notation.cpp  test_Notation.h  test_ProcessingInstruction.cpp  test_SAX.cpp  test_SAX.h  test_Siblings.cpp  test_Siblings.h  test_Text.cpp  test_Text.hpp  test_TreeWalker.hpp
test/XPath/: .cvsignore  Makefile  Makefile.am  arithmetic_test.cpp  arithmetic_test.hpp  axis_enumerator_test.cpp  axis_enumerator_test.hpp  execute_test.cpp  execute_test.hpp  logical_test.cpp  logical_test.hpp  main.cpp  main_wide.cpp  match_test.hpp  node_test_test.cpp  node_test_test.hpp  parse_test.cpp  relational_test.cpp  relational_test.hpp  step_test.cpp  step_test.hpp  value_test.cpp  value_test.hpp  xpath_test_suite.hpp  xpathic.vcproj
tests/CppUnit/: Makefile.am  TestRunner.cpp  TestRunner.hpp
tests/DOM/: Makefile.am  dom_conf_test.hpp  dom_test_suite.hpp  main.cpp  main_silly.cpp  main_wide.cpp  test_Attribute.h  test_Attribute.hpp  test_CDATA.hpp  test_CharacterData.hpp  test_DOMImplementation.h  test_DOMImplementation.hpp  test_Document.h  test_Document.hpp  test_DocumentFragment.hpp  test_DocumentType.hpp  test_Element.hpp  test_NamedNodeMap.hpp  test_ProcessingInstruction.hpp  test_SAX2DOM.hpp  test_Siblings.hpp  test_Stream.hpp  test_Text.hpp  test_TreeWalker.hpp  test_path.hpp.in
tests/SAX/: FilterTest.cpp  Makefile.am  filter_test.cpp  filter_test_silly.cpp  filter_test_wide.cpp  test_WhitespaceStripper.hpp  test_and_log.sh
tests/Taggle/: Makefile.am  taggle_test.cpp  test_Taggle.hpp
tests/Utils/: Makefile.am  test_base64.hpp  test_normalize_whitespace.hpp  test_qname.hpp  test_uri.hpp  test_xml_strings.hpp  util_test_suite.hpp  utils_test.cpp  (+2 more)
(+8119 files in other folders)
