
sax_headers = SAX/SAXParseException.hpp \
	SAX/ErrorHandler.hpp \
	SAX/SAXException.hpp \
	SAX/SAXNotRecognizedException.hpp \
	SAX/ParserConfig.hpp \
	SAX/InputSource.hpp \
	SAX/EntityResolver.hpp \
	SAX/Attributes.hpp \
	SAX/DocumentHandler.hpp \
	SAX/XMLFilter.hpp \
	SAX/IStreamHandle.hpp \
	SAX/Locator.hpp \
	SAX/DTDHandler.hpp \
	SAX/filter/XMLBaseTracker.hpp \
	SAX/filter/WhitespaceStripperFilter.hpp \
	SAX/filter/NamespaceTracker.hpp \
	SAX/filter/TextOnly.hpp \
	SAX/filter/Writer.hpp \
	SAX/filter/TextCoalescer.hpp \
	SAX/filter/PYXWriter.hpp \
	SAX/SAXNotSupportedException.hpp \
	SAX/ContentHandler.hpp \
	SAX/AttributeList.hpp \
	SAX/XMLReader.hpp \
	SAX/wrappers/saxexpat.hpp \
	SAX/wrappers/saxlibxml2.hpp \
	SAX/wrappers/saxxerces.hpp \
	SAX/wrappers/saxmsxml2.hpp \
	SAX/wrappers/XercesFeatureNames.hpp \
	SAX/wrappers/XercesPropertyNames.hpp \
	SAX/saxfwd.hpp \
	SAX/ext/Attributes2.hpp \
	SAX/ext/DefaultHandler2.hpp \
	SAX/ext/DeclHandler.hpp \
	SAX/ext/Locator2.hpp \
	SAX/ext/LexicalHandler.hpp \
	SAX/ext/ProgressiveParser.hpp \
	SAX/helpers/AttributeListImpl.hpp \
	SAX/helpers/AttributeTypes.hpp \
	SAX/helpers/AttributeDefaults.hpp \
	SAX/helpers/LocatorImpl.hpp \
	SAX/helpers/ParserAdaptor.hpp \
	SAX/helpers/NamespaceSupport.hpp \
	SAX/helpers/XMLFilterImpl.hpp \
	SAX/helpers/PropertyNames.hpp \
	SAX/helpers/AttributesImpl.hpp \
	SAX/helpers/DefaultHandler.hpp \
	SAX/helpers/InputSourceResolver.hpp \
	SAX/helpers/CatchErrorHandler.hpp \
	SAX/helpers/FeatureNames.hpp \
	SAX/helpers/XMLBaseSupport.hpp \
	SAX/parsers/saxgarden.hpp 

taggle_headers = Taggle/Taggle.hpp \
	Taggle/impl/ElementType.hpp \
	Taggle/impl/Element.hpp \
	Taggle/impl/html/HTMLModels.hpp \
	Taggle/impl/html/HTMLScanner.hpp \
	Taggle/impl/html/HTMLSchema.hpp \
	Taggle/impl/SchemaImpl.hpp \
	Taggle/impl/ScanHandler.hpp \
	Taggle/impl/Schema.hpp \
	Taggle/impl/Parser.hpp \
	Taggle/impl/Scanner.hpp

dom_headers = 	DOM/SAX2DOM/SAX2DOM.hpp \
	DOM/SAX2DOM/DocumentTypeImpl.hpp \
	DOM/Notation.hpp \
	DOM/Comment.hpp \
	DOM/Element.hpp \
	DOM/Node.hpp \
	DOM/DocumentFragment.hpp \
	DOM/ProcessingInstruction.hpp \
	DOM/CDATASection.hpp \
	DOM/Text.hpp \
	DOM/Document.hpp \
	DOM/DualMode/DualMode.hpp \
	DOM/CharacterData.hpp \
	DOM/Entity.hpp \
	DOM/Traversal/TreeWalker.hpp \
	DOM/Traversal/DocumentTraversal.hpp \
	DOM/Traversal/DocumentTraversalImpl.hpp \
	DOM/Traversal/NodeFilter.hpp \
	DOM/Traversal/TraversalImpl.hpp \
	DOM/Traversal/NodeIterator.hpp \
	DOM/Traversal/TreeWalkerImpl.hpp \
	DOM/DOMImplementation.hpp \
	DOM/DOMException.hpp \
	DOM/NamedNodeMap.hpp \
	DOM/EntityReference.hpp \
	DOM/Attr.hpp \
	DOM/NodeList.hpp \
	DOM/Simple/ProcessingInstructionImpl.hpp \
	DOM/Simple/EntityReferenceImpl.hpp \
	DOM/Simple/CharacterDataImpl.hpp \
	DOM/Simple/AttrImpl.hpp \
	DOM/Simple/TextImpl.hpp \
	DOM/Simple/EntityImpl.hpp \
	DOM/Simple/ElementNSImpl.hpp \
	DOM/Simple/DocumentImpl.hpp \
	DOM/Simple/CDATASectionImpl.hpp \
	DOM/Simple/DOMImplementation.hpp \
	DOM/Simple/AttrMap.hpp \
	DOM/Simple/AttrNSImpl.hpp \
	DOM/Simple/ElementByTagImpl.hpp \
	DOM/Simple/DocumentFragmentImpl.hpp \
	DOM/Simple/Helpers.hpp \
	DOM/Simple/NodeImpl.hpp \
	DOM/Simple/ElementImpl.hpp \
	DOM/Simple/NamedNodeMapImpl.hpp \
	DOM/Simple/CommentImpl.hpp \
	DOM/Simple/NotationImpl.hpp \
	DOM/Simple/DocumentTypeImpl.hpp \
	DOM/DocumentType.hpp \
	DOM/Events/EventListener.hpp \
	DOM/Events/Event.hpp \
	DOM/Events/DocumentEvent.hpp \
	DOM/Events/EventException.hpp \
	DOM/Events/MutationEvent.hpp \
	DOM/Events/EventTarget.hpp \
	DOM/Proxy.hpp \
	DOM/io/Stream.hpp 

arabica_headers = convert/utf8ucs2codecvt.hpp \
	convert/utf8iso88591codecvt.hpp \
	convert/utf16beucs2codecvt.hpp \
	convert/utf16leucs2codecvt.hpp \
	convert/impl/codecvt_specialisations.hpp \
	convert/impl/ucs2_utf16.hpp \
	convert/impl/iso88591_utf8.hpp \
	convert/impl/ucs2_utf8.hpp \
	convert/base64codecvt.hpp \
	convert/ucs2utf8codecvt.hpp \
	convert/utf16utf8codecvt.hpp \
	convert/iso88591utf8codecvt.hpp \
	convert/rot13codecvt.hpp \
	Arabica/StringAdaptor.hpp \
	Arabica/stringadaptortag.hpp \
	Arabica/getparam.hpp \
	Arabica/mbstate.hpp \
	text/normalize_whitespace.hpp \
	text/UnicodeCharacters.hpp \
	io/convertstream.hpp \
	io/uri.hpp \
	io/convert_adaptor.hpp \
	io/socket_stream.hpp \
	XML/strings.hpp \
	XML/QName.hpp \
	XML/XMLCharacterClasses.hpp \
	XML/escaper.hpp 

xpath_headers =	XPath/XPath.hpp \
	XPath/impl/xpath_variable_resolver.hpp \
	XPath/impl/xpath_compile_context.hpp \
	XPath/impl/xpath_expression.hpp \
	XPath/impl/xpath_union.hpp \
	XPath/impl/xpath_function_resolver.hpp \
	XPath/impl/xpath_function_holder.hpp \
	XPath/impl/xpath_axis_enumerator.hpp \
	XPath/impl/xpath_value.hpp \
	XPath/impl/xpath_variable.hpp \
	XPath/impl/xpath_match.hpp \
	XPath/impl/xpath_object.hpp \
	XPath/impl/xpath_resolver_holder.hpp \
	XPath/impl/xpath_arithmetic.hpp \
	XPath/impl/xpath_grammar.hpp \
	XPath/impl/xpath_expression_impl.hpp \
	XPath/impl/xpath_logical.hpp \
	XPath/impl/xpath_ast_ids.hpp \
	XPath/impl/xpath_function.hpp \
	XPath/impl/xpath_step.hpp \
	XPath/impl/xpath_namespace_node.hpp \
	XPath/impl/xpath_match_rewrite.hpp \
	XPath/impl/xpath_relational.hpp \
	XPath/impl/xpath_node_test.hpp \
	XPath/impl/xpath_ast.hpp \
	XPath/impl/xpath_namespace_context.hpp \
	XPath/impl/xpath_parser.hpp \
	XPath/impl/xpath_execution_context.hpp \
	XPath/impl/xpath_variable_compile_time_resolver.hpp

xslt_headers = 	XSLT/XSLT.hpp \
	XSLT/impl/xslt_choose.hpp \
	XSLT/impl/xslt_template.hpp \
	XSLT/impl/xslt_top_level_param.hpp \
	XSLT/impl/xslt_processing_instruction.hpp \
	XSLT/impl/xslt_variable_impl.hpp \
	XSLT/impl/xslt_for_each.hpp \
	XSLT/impl/xslt_qname.hpp \
	XSLT/impl/xslt_functions.hpp \
	XSLT/impl/xslt_param.hpp \
	XSLT/impl/xslt_item.hpp \
	XSLT/impl/xslt_element.hpp \
	XSLT/impl/xslt_call_template.hpp \
	XSLT/impl/xslt_variable_stack.hpp \
	XSLT/impl/xslt_stylesheet.hpp \
	XSLT/impl/handler/xslt_apply_templates_handler.hpp \
	XSLT/impl/handler/xslt_output_handler.hpp \
	XSLT/impl/handler/xslt_comment_handler.hpp \
	XSLT/impl/handler/xslt_attribute_handler.hpp \
	XSLT/impl/handler/xslt_value_validation.hpp \
	XSLT/impl/handler/xslt_item_container_handler.hpp \
	XSLT/impl/handler/xslt_text_handler.hpp \
	XSLT/impl/handler/xslt_constants.hpp \
	XSLT/impl/handler/xslt_inline_element_handler.hpp \
	XSLT/impl/handler/xslt_sort_handler.hpp \
	XSLT/impl/handler/xslt_apply_imports_handler.hpp \
	XSLT/impl/handler/xslt_include_handler.hpp \
	XSLT/impl/handler/xslt_create_handler.hpp \
	XSLT/impl/handler/xslt_foreign_element_handler.hpp \
	XSLT/impl/handler/xslt_with_param_handler.hpp \
	XSLT/impl/handler/xslt_namespace_alias_handler.hpp \
	XSLT/impl/handler/xslt_if_handler.hpp \
	XSLT/impl/handler/xslt_copy_handler.hpp \
	XSLT/impl/handler/xslt_variable_handler.hpp \
	XSLT/impl/handler/xslt_element_handler.hpp \
	XSLT/impl/handler/xslt_for_each_handler.hpp \
	XSLT/impl/handler/xslt_key_handler.hpp \
	XSLT/impl/handler/xslt_message_handler.hpp \
	XSLT/impl/handler/xslt_call_template_handler.hpp \
	XSLT/impl/handler/xslt_processing_instruction_handler.hpp \
	XSLT/impl/handler/xslt_choose_handler.hpp \
	XSLT/impl/handler/xslt_template_handler.hpp \
	XSLT/impl/handler/xslt_value_of_handler.hpp \
	XSLT/impl/xslt_stylesheet_parser.hpp \
	XSLT/impl/xslt_inline_element.hpp \
	XSLT/impl/xslt_if.hpp \
	XSLT/impl/xslt_compilation_context.hpp \
	XSLT/impl/xslt_execution_context.hpp \
	XSLT/impl/xslt_copy.hpp \
	XSLT/impl/xslt_namespace_stack.hpp \
	XSLT/impl/xslt_sort.hpp \
	XSLT/impl/xslt_comment.hpp \
	XSLT/impl/xslt_precedence.hpp \
	XSLT/impl/xslt_compiled_stylesheet.hpp \
	XSLT/impl/xslt_apply_imports.hpp \
	XSLT/impl/xslt_stylesheet_compiler.hpp \
	XSLT/impl/xslt_output.hpp \
	XSLT/impl/xslt_value_of.hpp \
	XSLT/impl/xslt_with_param.hpp \
	XSLT/impl/xslt_attribute.hpp \
	XSLT/impl/xslt_variable.hpp \
	XSLT/impl/xslt_sink.hpp \
	XSLT/impl/xslt_message.hpp \
	XSLT/impl/xslt_key.hpp \
	XSLT/impl/xslt_text.hpp \
	XSLT/impl/xslt_apply_templates.hpp 

arabicadir = $(includedir)/arabica
nobase_arabica_HEADERS = SAX/ArabicaConfig.hpp $(arabica_headers) $(sax_headers) $(taggle_headers) 
if WANT_DOM
  nobase_arabica_HEADERS += $(dom_headers)
endif
if WANT_XPATH
  nobase_arabica_HEADERS += $(xpath_headers) $(xslt_headers)
endif

